- search now displays thumbnail images for documents - added correct no-photo image to slingshot and avatar thumbnail service - fix for wrong rendering of the "add invite by email" box on IE
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10136 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/search/search.css
+++ b/root/projects/slingshot/source/web/components/search/search.css
@@ -42,5 +42,5 @@
 
 #template_title_search .back-icon {
 	padding-left: 22px;
-	background: url(images/back.gif) no-repeat center left;
+	background: url(../images/back-arrow.png) no-repeat center left;
 }
